// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spinner should also render a spinner without a title 1`] = `
<div>
  <svg
    role="img"
    viewBox="0 0 58 58"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      fill="none"
      fill-rule="evenodd"
    >
      <g
        stroke="#FFFFFF"
        stroke-width="1.5"
        transform="translate(2 1)"
      >
        <circle
          cx="42.601"
          cy="11.462"
          fill="#FFFFFF"
          fill-opacity="1"
          r="5"
        >
          <animate
            attributeName="fill-opacity"
            begin="0s"
            calcMode="linear"
            dur="1.3s"
            repeatCount="indefinite"
            values="1;0;0;0;0;0;0;0"
          />
        </circle>
        <circle
          cx="49.063"
          cy="27.063"
          fill="#FFFFFF"
          fill-opacity="0"
          r="5"
        >
          <animate
            attributeName="fill-opacity"
            begin="0s"
            calcMode="linear"
            dur="1.3s"
            repeatCount="indefinite"
            values="0;1;0;0;0;0;0;0"
          />
        </circle>
        <circle
          cx="42.601"
          cy="42.663"
          fill="#FFFFFF"
          fill-opacity="0"
          r="5"
        >
          <animate
            attributeName="fill-opacity"
            begin="0s"
            calcMode="linear"
            dur="1.3s"
            repeatCount="indefinite"
            values="0;0;1;0;0;0;0;0"
          />
        </circle>
        <circle
          cx="27"
          cy="49.125"
          fill="#FFFFFF"
          fill-opacity="0"
          r="5"
        >
          <animate
            attributeName="fill-opacity"
            begin="0s"
            calcMode="linear"
            dur="1.3s"
            repeatCount="indefinite"
            values="0;0;0;1;0;0;0;0"
          />
        </circle>
        <circle
          cx="11.399"
          cy="42.663"
          fill="#FFFFFF"
          fill-opacity="0"
          r="5"
        >
          <animate
            attributeName="fill-opacity"
            begin="0s"
            calcMode="linear"
            dur="1.3s"
            repeatCount="indefinite"
            values="0;0;0;0;1;0;0;0"
          />
        </circle>
        <circle
          cx="4.938"
          cy="27.063"
          fill="#FFFFFF"
          fill-opacity="0"
          r="5"
        >
          <animate
            attributeName="fill-opacity"
            begin="0s"
            calcMode="linear"
            dur="1.3s"
            repeatCount="indefinite"
            values="0;0;0;0;0;1;0;0"
          />
        </circle>
        <circle
          cx="11.399"
          cy="11.462"
          fill="#FFFFFF"
          fill-opacity="0"
          r="5"
        >
          <animate
            attributeName="fill-opacity"
            begin="0s"
            calcMode="linear"
            dur="1.3s"
            repeatCount="indefinite"
            values="0;0;0;0;0;0;1;0"
          />
        </circle>
        <circle
          cx="27"
          cy="5"
          fill="#FFFFFF"
          fill-opacity="0"
          r="5"
        >
          <animate
            attributeName="fill-opacity"
            begin="0s"
            calcMode="linear"
            dur="1.3s"
            repeatCount="indefinite"
            values="0;0;0;0;0;0;0;1"
          />
        </circle>
      </g>
    </g>
  </svg>
</div>
`;

exports[`spinner should render a spinner 1`] = `
<div>
  <svg
    aria-labelledby="testId"
    role="img"
    viewBox="0 0 58 58"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="testId"
    >
      Working
    </title>
    <g
      fill="none"
      fill-rule="evenodd"
    >
      <g
        stroke="#FFFFFF"
        stroke-width="1.5"
        transform="translate(2 1)"
      >
        <circle
          cx="42.601"
          cy="11.462"
          fill="#FFFFFF"
          fill-opacity="1"
          r="5"
        >
          <animate
            attributeName="fill-opacity"
            begin="0s"
            calcMode="linear"
            dur="1.3s"
            repeatCount="indefinite"
            values="1;0;0;0;0;0;0;0"
          />
        </circle>
        <circle
          cx="49.063"
          cy="27.063"
          fill="#FFFFFF"
          fill-opacity="0"
          r="5"
        >
          <animate
            attributeName="fill-opacity"
            begin="0s"
            calcMode="linear"
            dur="1.3s"
            repeatCount="indefinite"
            values="0;1;0;0;0;0;0;0"
          />
        </circle>
        <circle
          cx="42.601"
          cy="42.663"
          fill="#FFFFFF"
          fill-opacity="0"
          r="5"
        >
          <animate
            attributeName="fill-opacity"
            begin="0s"
            calcMode="linear"
            dur="1.3s"
            repeatCount="indefinite"
            values="0;0;1;0;0;0;0;0"
          />
        </circle>
        <circle
          cx="27"
          cy="49.125"
          fill="#FFFFFF"
          fill-opacity="0"
          r="5"
        >
          <animate
            attributeName="fill-opacity"
            begin="0s"
            calcMode="linear"
            dur="1.3s"
            repeatCount="indefinite"
            values="0;0;0;1;0;0;0;0"
          />
        </circle>
        <circle
          cx="11.399"
          cy="42.663"
          fill="#FFFFFF"
          fill-opacity="0"
          r="5"
        >
          <animate
            attributeName="fill-opacity"
            begin="0s"
            calcMode="linear"
            dur="1.3s"
            repeatCount="indefinite"
            values="0;0;0;0;1;0;0;0"
          />
        </circle>
        <circle
          cx="4.938"
          cy="27.063"
          fill="#FFFFFF"
          fill-opacity="0"
          r="5"
        >
          <animate
            attributeName="fill-opacity"
            begin="0s"
            calcMode="linear"
            dur="1.3s"
            repeatCount="indefinite"
            values="0;0;0;0;0;1;0;0"
          />
        </circle>
        <circle
          cx="11.399"
          cy="11.462"
          fill="#FFFFFF"
          fill-opacity="0"
          r="5"
        >
          <animate
            attributeName="fill-opacity"
            begin="0s"
            calcMode="linear"
            dur="1.3s"
            repeatCount="indefinite"
            values="0;0;0;0;0;0;1;0"
          />
        </circle>
        <circle
          cx="27"
          cy="5"
          fill="#FFFFFF"
          fill-opacity="0"
          r="5"
        >
          <animate
            attributeName="fill-opacity"
            begin="0s"
            calcMode="linear"
            dur="1.3s"
            repeatCount="indefinite"
            values="0;0;0;0;0;0;0;1"
          />
        </circle>
      </g>
    </g>
  </svg>
</div>
`;
